# text_to_speech

./: .gitignore  LICENSE  NOTICE  README.md  tutorial.md
backend/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  utils.py
backend/dia/: __init__.py  audio.py  config.py  layers.py  model.py  state.py
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/components/: AudioControls.svelte  AudioOutput.svelte  ChatInterface.svelte  GenerationButton.svelte  GenerationSettings.svelte  Message.svelte  SoundEffectsPanel.svelte
frontend/src/lib/: api.ts
frontend/src/routes/: +page.svelte  home.svelte
frontend/src/routes/api/generate/: +server.ts
