[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "descript-audio-codec>=1.0.0",
    "fastapi[standard]>=0.115.12",
    "huggingface-hub>=0.32.1",
    "pydantic>=2.11.5",
    "safetensors>=0.5.3",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
]


